--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <modules>
         <module>springcloud-api</module>
         <module>springcloud-provider-dept-8001</module>
+        <module>springcloud-consumer-dept-80</module>
+        <module>springcloud-eureka-7001</module>
     </modules>
     <name>springcloud</name>
     <packaging>pom</packaging>
@@ -24,6 +26,7 @@
         <weixin.sdk.version>3.6.0</weixin.sdk.version>
         <druid.version>1.1.21</druid.version>
         <mybatis.version>1.3.2</mybatis.version>
+        <spring.cloud.netflix.version>2.1.0.RELEASE</spring.cloud.netflix.version>
     </properties>
 
     <dependencyManagement>
@@ -44,6 +47,13 @@
                 <scope>import</scope>
                 <version>${spring.cloud.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-netflix-dependencies</artifactId>
+                <type>pom</type>
+                <scope>import</scope>
+                <version>${spring.cloud.netflix.version}</version>
+            </dependency>
             <!-- durid -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -55,12 +65,6 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.version}</version>
-            </dependency>
-            <!--mybatis 逆向工程 -->
-            <dependency>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-core</artifactId>
-                <version>${mybatis.generator.version}</version>
             </dependency>
             <!-- Swagger2 -->
             <dependency>
