--- a/springcloud-eureka-7003/pom.xml
+++ b/springcloud-eureka-7003/pom.xml
@@ -9,17 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-consumer-dept-80</artifactId>
+    <artifactId>springcloud-eureka-7003</artifactId>
 
     <dependencies>
+        <!--eureka 服务端依赖 -->
         <dependency>
-            <groupId>com.floatpoint</groupId>
-            <artifactId>springcloud-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
         <!--热部署-->
         <dependency>
