--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         <module>springcloud-provider-dept-8001</module>
         <module>springcloud-consumer-dept-80</module>
         <module>springcloud-eureka-7001</module>
+        <module>springcloud-eureka-7002</module>
+        <module>springcloud-eureka-7003</module>
     </modules>
     <name>springcloud</name>
     <packaging>pom</packaging>
@@ -110,10 +112,28 @@
     </dependencyManagement>
 
     <build>
+        <!--父工程名字-->
+        <finalName>${project.name}</finalName>
+        <!--资源-->
+        <resources>
+            <resource>
+                <!--运行访问项目所有resources文件夹下面的内容-->
+                <directory>src/main/resources</directory>
+                <!--开启过滤器-->
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--负责解析和解读的插件：动态解析info信息-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>
+                        <!--读取上面directory下以$开头和结尾的配置文件-->
+                        <delimiter>$</delimiter>
+                    </delimiters>
+                </configuration>
             </plugin>
         </plugins>
     </build>
