--- a/springcloud-consumer-dept-80/src/main/resources/application.yml
+++ b/springcloud-consumer-dept-80/src/main/resources/application.yml
@@ -1,5 +1,14 @@
 server:
   port: 80
 
-url:
-  prexfix: http://localhost:8001 # 请求地址前缀
+#url:
+#  prexfix: http://localhost:8001 # 请求地址前缀。使用ribbon后可以直接通过微服务名字访问，所以这个注解全部注释掉。
+
+#ribbon 负载均衡需要进行 eureka配置
+eureka:
+  client:
+    register-with-eureka: false #表示是否向eureka注册中心注册自己。客户端不能向eurake注册
+    service-url:
+      #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
+      #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://eureka7002:7002/eureka/,http://eureka7001:7001/eureka/
