--- a/springcloud-provider-dept-8003/src/main/resources/application.yml
+++ b/springcloud-provider-dept-8003/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
-  port: 8001
+  port: 8003
 
 spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://123.56.106.192:3306/springcloud-01?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    url: jdbc:mysql://123.56.106.192:3306/springcloud-03?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
   application:
-    name: PROVIDER-DEPT #微服务的Application名字 PROVIDER-DEPT。
+    name: PROVIDER-DEPT #微服务的Application名字 PROVIDER-DEPT
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -25,7 +25,7 @@ eureka:
       #defaultZone: http://localhost:7001/eureka/
       defaultZone: http://eureka7002:7002/eureka/,http://eureka7001:7001/eureka/,http://eureka7003:7003/eureka/
   instance:
-    instance-id: provider-dept-8001 #自定义微服务实例名称信息,微服务名称不能重复，是唯一的。使用ribbon做轮询的时候这个不能重复，不然就是一个实例了。
+    instance-id: provider-dept-8003 #自定义微服务实例名称信息,微服务名称不能重复，是唯一的。使用ribbon做轮询的时候这个不能重复，不然就是一个实例了。
     prefer-ip-address: true #访问路径可以显示ip地址信息，window电脑如果不配置的话那么就会显示电脑名称
 
 #info信息
