--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springcloud-eureka-7003</module>
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
+        <module>springcloud-consumer-dept-feign</module>
     </modules>
     <name>springcloud</name>
     <packaging>pom</packaging>
@@ -31,6 +32,7 @@
         <druid.version>1.1.21</druid.version>
         <mybatis.version>1.3.2</mybatis.version>
         <spring.cloud.netflix.version>2.1.0.RELEASE</spring.cloud.netflix.version>
+        <openfeign.version>2.1.1.RELEASE</openfeign.version>
     </properties>
 
     <dependencyManagement>
@@ -109,6 +111,11 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml-schemas</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${openfeign.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
