--- a/springcloud-consumer-dept-80/src/main/resources/application.yml
+++ b/springcloud-consumer-dept-80/src/main/resources/application.yml
@@ -1,14 +1,24 @@
 server:
   port: 80
 
-#url:
-#  prexfix: http://localhost:8001 # 请求地址前缀。使用ribbon后可以直接通过微服务名字访问，所以这个注解全部注释掉。
+spring:
+  application:
+    name: consumer #微服务的applicationName。需要注意这个不是项目启动路径
 
 #ribbon 负载均衡需要进行 eureka配置
+#eureka配置
 eureka:
   client:
-    register-with-eureka: false #表示是否向eureka注册中心注册自己。客户端不能向eurake注册
     service-url:
-      #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
-      #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      defaultZone: http://eureka7002:7002/eureka/,http://eureka7001:7001/eureka/
+      defaultZone: http://eureka7002:7002/eureka/,http://eureka7001:7001/eureka/,http://eureka7003:7003/eureka/
+  instance:
+    instance-id: consumer-dept-80 #自定义微服务实例名称信息,微服务名称不能重复，是唯一的。使用ribbon做轮询的时候这个不能重复，不然就是一个实例了。
+    prefer-ip-address: true #访问路径可以显示ip地址信息，window电脑如果不配置的话那么就会显示电脑名称
+
+#info信息
+info:
+  app.name: springcloud-demo
+  company.name: floatpoint-tec
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
+
