hystrix 新增断熔器

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
         <module>springcloud-consumer-dept-feign</module>
+        <module>springcloud-provider-dept-8001-hystrix</module>
     </modules>
     <name>springcloud</name>
     <packaging>pom</packaging>
