--- a/springcloud-consumer-dept-feign/src/main/resources/application.yml
+++ b/springcloud-consumer-dept-feign/src/main/resources/application.yml
@@ -12,3 +12,8 @@ eureka:
       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
       #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
       defaultZone: http://eureka7002:7002/eureka/,http://eureka7001:7001/eureka/
+
+#开启hystrix支持
+feign:
+  hystrix:
+    enabled: true
